--- a/Task4_Webpage_using_CSS/task4.css
+++ b/Task4_Webpage_using_CSS/task4.css
@@ -11,13 +11,43 @@
     text-align: center;
 }
 
-*
+
+.Ba
 {
-    background-image: url("background.jpeg");
+    background-image: url("bg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    font-family:Arial, Helvetica, sans-serif;
 }
+
+.Bc
+{
+    background-image: url("bg2.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.Bh
+{
+    background-image: url("bg3.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.Bm
+{
+    background-image: url("bg4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 
 a {
     color:yellow;
