--- a/Task3.3_Frame/style.css
+++ b/Task3.3_Frame/style.css
@@ -196,9 +196,9 @@ footer h2 {
 }
 
 .login-header h1 {
-  font-size: 2em;
+  font-size: 2.5em;
   margin: 0;
-  color: #2980b9;
+  color: #000000;
 }
 
 .login-header p {
@@ -206,7 +206,6 @@ footer h2 {
   color: #7f8c8d;
 }
 
-/* Login Form */
 .login-form label {
   display: block;
   margin: 10px 0 5px;
@@ -239,7 +238,6 @@ footer h2 {
   background: #1e6ba8;
 }
 
-/* Forgot Password Link */
 .forgot-password {
   text-align: center;
   margin-top: 10px;
