--- a/Task4_Webpage_using_CSS/task4.css
+++ b/Task4_Webpage_using_CSS/task4.css
@@ -14,7 +14,7 @@
 
 .Ba
 {
-    background-image: url("bg1.jpg");
+    background-image: url("BackGround\ Images/bg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -23,7 +23,7 @@
 
 .Bc
 {
-    background-image: url("bg2.jpg");
+    background-image: url("BackGround\ Images/bg2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -32,7 +32,7 @@
 
 .Bh
 {
-    background-image: url("bg3.jpg");
+    background-image: url("BackGround\ Images/bg3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -41,7 +41,7 @@
 
 .Bm
 {
-    background-image: url("bg4.jpg");
+    background-image: url("BackGround\ Images/bg4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
